# image-text-ranking-system-mlops

./: .dockerignore  .gitignore  Dockerfile  MLOps_README.md  Makefile  README.md  airflow-requirements.txt  compose.yml  data_loader.py  demo.py  evaluate.py  run.sh  search.py  specs.md  start.sh  train.py
.cursor/rules/: mlops-image-text-ranking.mdc  project-setup.mdc
api/: Dockerfile  app.py  pyproject.toml
api/api_models/: schemas.py
api/models/: schemas.py
api/services/: data_service.py  model_service.py  training_service.py
dags/: data_ingestion_dag.py
data_flows/: README_DAG_USAGE.md  SUMMARY.md  airflow-requirements.txt  example_configs.json  minio_data_loader.py  preprocess_flickr8k.py  requirements.txt  setup_airflow_vars.py
data_flows/config/: airflow.cfg
data_flows/dags/: data_ingestion_dag.py  flickr8k_data_pipeline.py  flickr8k_minio_pipeline.py  flickr8k_with_sync.py
data_flows/dags/utils/: data_sync.py  minio_client.py  setup_airflow_vars.py  setup_dag_variables.py
model/: .gitignore  QUICKSTART.md  README.md  evaluate.py  inference_demo.py  mlops.ipynb  model.py  pyproject.toml  requirements.txt  run.sh  search.py  test_hf_dataset.py  test_setup.py  train.py
model/models/: training_history.json
model/src/: __init__.py  config.py
model/src/data/: __init__.py  dataset.py
model/src/inference/: __init__.py  predictor.py
model/src/models/: __init__.py  encoders.py
model/src/training/: metrics.py  trainer.py
